# moos-ivp-marineswarm

./: CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  CMakeLists.txt~
src/iMSEASOceanModelDirect/: CMakeLists.txt  MSEASOceanModelDirect.cpp  MSEASOceanModelDirect.h  MSEASOceanModelDirect_Info.cpp  MSEASOceanModelDirect_Info.h  generate_sample_times.m  iMSEASOceanModelDirect.moos  interp1_alt.m  main.cpp  mseaspe_model_time.m  readmseaspe_moossafir.m
src/lib_behaviors/: CMakeLists.txt  CMakeLists.txt~
src/lib_behaviors/AcousticPingPlanner/: BHV_AcousticPingPlanner.bhv  BHV_AcousticPingPlanner.bhv~  BHV_AcousticPingPlanner.cpp  BHV_AcousticPingPlanner.h  CMakeLists.txt  CMakeLists.txt~
src/lib_behaviors/AssignmentRegistration/: BHV_AssignmentRegistration.cpp  BHV_AssignmentRegistration.h  BHV_AssignmentRegistration_example.cpp  CMakeLists.txt  CMakeLists.txt~
src/lib_behaviors/AssignmentRegistrationBkp/: BHV_AssignmentRegistration.cpp  BHV_AssignmentRegistration.h  CMakeLists.txt
src/lib_behaviors/AttractionRepulsion/: BHV_AttractionRepulsion.bhv~  BHV_AttractionRepulsion.cpp  BHV_AttractionRepulsion.h  CMakeLists.txt  CMakeLists.txt~
src/lib_behaviors/AttractionRepulsionOpt/: BHV_AttractionRepulsionOpt.bhv  BHV_AttractionRepulsionOpt.bhv~  BHV_AttractionRepulsionOpt.cpp  BHV_AttractionRepulsionOpt.h  CMakeLists.txt  CMakeLists.txt~
src/lib_behaviors/AttractionRepulsionReferencing/: BHV_AttractionRepulsionReferencing.bhv  BHV_AttractionRepulsionReferencing.bhv~  BHV_AttractionRepulsionReferencing.cpp  BHV_AttractionRepulsionReferencing.h  CMakeLists.txt
src/lib_behaviors/ContactsPing_Formation/: CMakeLists.txt  (+3 more)
src/lib_common/: CMakeLists.txt  CMakeLists.txt~
src/lib_moossafir_protobuf/: CMakeLists.txt  id-codec.cpp  load-driver.cpp  mini-status.proto  pAcommsHandler_CGG  sim-driver.cpp  sim-driver.h  sim-driver.proto  status.proto
src/pContactsViewer_CGG/: CMakeLists.txt  ContactsViewer_CGG.cpp  ContactsViewer_CGG.h  ContactsViewer_CGG_Info.cpp  ContactsViewer_CGG_Info.h  ContactsViewer_CGG_Test.cpp  ContactsViewer_CGG_Test.h  main.cpp  pContactsViewer_CGG.moos
src/pConvexHullTest/: CMakeLists.txt  CMakeLists.txt~  ConvexHullTest.cpp  ConvexHullTest.h  ConvexHullTest_Info.cpp  ConvexHullTest_Info.h  main.cpp  pConvexHullTest.moos
src/pFolagaPID_CGG/: CMakeLists.txt  MarinePID.cpp  MarinePID.h  MarinePID_Info.cpp  MarinePID_Info.h  PIDEngine.cpp  PIDEngine.h  ScalarPID.cpp  ScalarPID.h  main.cpp  pFolagaPID_CGG.moos
src/pFormationQualityMetric/: CMakeLists.txt  CMakeLists.txt~  FormationQualityMetric.cpp  FormationQualityMetric.h  FormationQualityMetric_Info.cpp  FormationQualityMetric_Info.h  main.cpp  pFormationQualityMetric.moos
src/pFormationViewer/: CMakeLists.txt  CMakeLists.txt~  FormationViewer.cpp  FormationViewer.h  FormationViewer_Info.cpp  FormationViewer_Info.h  main.cpp  pFormationViewer.moos
src/pIrrotationalVortexCurrent/: CMakeLists.txt  IrrotationalVortexCurrent.cpp  IrrotationalVortexCurrent.h  IrrotationalVortexCurrent_Info.cpp  IrrotationalVortexCurrent_Info.h  main.cpp  pIrrotationalVortexCurrent.moos
src/pLogger_CGG/: CMakeLists.txt  Logger_CGG.cpp  Logger_CGG.h  Logger_CGG_Info.cpp  Logger_CGG_Info.h  Logger_CGG_Test.cpp  Logger_CGG_Test.h  main.cpp  pLogger_CGG.moos
src/pMSEASOceanModelVisDirect/: CMakeLists.txt  CMakeLists.txt~  MSEASOceanModelVisDirect.cpp  MSEASOceanModelVisDirect.h  MSEASOceanModelVisDirect_Info.cpp  MSEASOceanModelVisDirect_Info.h  main.cpp  pMSEASOceanModelVisDirect.moos  pMSEASOceanModelVisDirect.moos~
src/pMarinePIDFreedom_CGG/: CMakeLists.txt  MarinePID.cpp  MarinePID.h  MarinePID_Info.cpp  MarinePID_Info.h  PIDEngine.cpp  PIDEngine.h  ScalarPID.cpp  ScalarPID.h  main.cpp  pMarinePIDFreedom_CGG.moos
src/pNodeLogger/: CMakeLists.txt  CMakeLists.txt~  NodeLogger.cpp  NodeLogger.h  NodeLogger_Info.cpp  NodeLogger_Info.h  main.cpp  pNodeLogger.moos
src/pShoreLogger/: CMakeLists.txt  CMakeLists.txt~  ShoreLogger.cpp  ShoreLogger.h  ShoreLogger_Info.cpp  ShoreLogger_Info.h  main.cpp  pShoreLogger.moos
src/pSimulateNodeLoss/: CMakeLists.txt  SimulateNodeLoss.cpp  SimulateNodeLoss.h  SimulateNodeLoss_Info.cpp  SimulateNodeLoss_Info.h  main.cpp  pSimulateNodeLoss.moos
src/pThreeChannelCurrent/: CMakeLists.txt  ThreeChannelCurrent.cpp  ThreeChannelCurrent.h  ThreeChannelCurrent_Info.cpp  ThreeChannelCurrent_Info.h  main.cpp  pThreeChannelCurrent.moos
src/pTrailViewer/: CMakeLists.txt  CMakeLists.txt~  TrailViewer.cpp  TrailViewer.h  TrailViewer_Info.cpp  TrailViewer_Info.h  main.cpp  pTrailViewer.moos
src/uFldPingManager_CGG/: CMakeLists.txt  FldPingManager_CGG.cpp  FldPingManager_CGG.h  FldPingManager_CGG_Info.cpp  FldPingManager_CGG_Info.h  FldPingManager_CGG_Test.cpp  FldPingManager_CGG_Test.h  fld_ping_manager_config.proto  main.cpp  uFldPingManager_CGG.moos
src/uSimConsumption_CGG/: CMakeLists.txt  SimConsumption_CGG.cpp  SimConsumption_CGG.cpp~  SimConsumption_CGG.h  SimConsumption_CGG.h~  SimConsumption_CGG_Info.cpp  SimConsumption_CGG_Info.h  SimConsumption_CGG_Test.cpp  SimConsumption_CGG_Test.h  main.cpp  uSimConsumption_CGG.moos
src/uSimCurrent_CGG/: CMakeLists.txt
src/uSimDeployment_CGG/: CMakeLists.txt  SimDeployment_CGG.cpp  SimDeployment_CGG.h  SimDeployment_CGG_Info.cpp  SimDeployment_CGG_Info.h  SimDeployment_CGG_Test.cpp  SimDeployment_CGG_Test.h  main.cpp  uSimDeployment_CGG.moos
src/uSimFolaga_CGG/: CMakeLists.txt  CMakeLists.txt~  SimEngine.cpp  SimEngine.h  USM_Info.cpp  USM_Info.h  USM_MOOSApp.cpp  USM_MOOSApp.cpp~  USM_MOOSApp.h  USM_MOOSApp.h~  USM_Model.cpp  USM_Model.h  main.cpp  uSimFolaga_CGG.moos  uSimFolaga_CGG.moos~
src/uSimMarineFreedom_CGG/: CMakeLists.txt  Coef_Remus.h  Dynamics.cpp  Dynamics.h  Minv_script.m  SimEngine.cpp  SimEngine.h  USM_Info.cpp  USM_Info.h  USM_MOOSApp.cpp  USM_MOOSApp.h  USM_Model.cpp  USM_Model.h  main.cpp  uSimMarineFreedom_CGG.moos
src/uSimShot_CGG/: CMakeLists.txt  SimShot_CGG.cpp  SimShot_CGG.h  SimShot_CGG_Info.cpp  SimShot_CGG_Info.h  SimShot_CGG_Test.cpp  SimShot_CGG_Test.h  main.cpp  uSimShot_CGG.moos
(+975 files in other folders)
